--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
-                    <span>ArXiv</span>
+                    <span>Cell Discovery</span>
                   </a>
                 </span>
                 <!-- Code Link. -->
