--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="todo"
+                  <a href="https://www.nature.com/articles/s41421-024-00753-1.pdf"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -90,7 +90,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="todo" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://www.nature.com/articles/s41421-024-00753-1" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
@@ -261,7 +261,7 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>todo</code></pre>
+      <pre><code>Feng, S., Li, S., Chen, L. et al. Unveiling potential threats: backdoor attacks in single-cell pre-trained models. Cell Discov 10, 122 (2024). https://doi.org/10.1038/s41421-024-00753-1</code></pre>
     </div>
   </section>
 
